src/test/deca/context/invalid/renduInter/08-wrong-type-eqeq-float-bool.deca
{
    float x = 4.0;
    boolean y = true;
    if( x==y ){
        print("OK");
    } else {
        print("KO");
    }
}